--- a/src/global.less
+++ b/src/global.less
@@ -9,6 +9,7 @@ body,
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
     'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
     'Noto Color Emoji';
+  background: #f0f2f5;
 }
 
 body {
@@ -42,6 +43,10 @@ body {
       line-height: 48px;
     }
   }
+}
+.main-page{
+  padding:12px;
+  background: #ffff;
 }
 .ag-watermark{
   display: none !important;
