--- a/src/components/TopNavHeader/index.less
+++ b/src/components/TopNavHeader/index.less
@@ -5,7 +5,9 @@
   line-height: 64px;
   height: @layout-header-height;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
-  position: relative;
+  position: fixed;
+  top: 0;
+  z-index: 10;
   .main {
     display: flex;
     height: @layout-header-height;
