--- a/src/components/SideMenu/styles.less
+++ b/src/components/SideMenu/styles.less
@@ -6,6 +6,8 @@
     background: #f0f2f5;
     display: flex;
     width: 256px;
+    overflow-y: auto;
+    scrollbar-width: none;
     :global{
         .ant-menu-light{
             background: transparent;
