--- a/src/global.less
+++ b/src/global.less
@@ -3,7 +3,6 @@
 html,
 body,
 #root {
-  height: 100%;
   margin: 0;
   padding: 0;
   scrollbar-width: none;
@@ -11,7 +10,7 @@ body,
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
     'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
     'Noto Color Emoji';
-  background: #f0f2f5;
+  background: linear-gradient(#ffffff, #f5f5f5 28%);
 }
 body {
   text-rendering: optimizeLegibility;
