--- a/src/layouts/styles.less
+++ b/src/layouts/styles.less
@@ -5,4 +5,7 @@
     overflow: auto;
     background-image:url('https://mdn.alipayobjects.com/yuyan_qk0oxh/afts/img/V-_oS6r-i7wAAAAAAAAAAAAAFl94AQBr');
     background-size: 100% 100%;
-  }
+}
+.wrap{
+  transition: padding-left 0.4s cubic-bezier(0.2, 0, 0, 1) 0s;
+}
