--- a/src/global.less
+++ b/src/global.less
@@ -1,4 +1,4 @@
-@import "../public/css/ag-grid-theme-builder.css";
+// @import "../public/css/ag-grid-theme-builder.css";
 
 html,
 body,
@@ -50,4 +50,13 @@ body {
 }
 .ag-watermark{
   display: none !important;
+}
+.custom-tooltip {
+  max-width: 200px;
+  background-color: #fff;
+  background-clip: padding-box;
+  border-radius: 2px;
+  padding: 12px 16px;
+  line-height: 22px;
+  box-shadow: 0 3px 6px -4px #0000001f;
 }
